--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 	background-color: #f95b14;
 	color: #ffffff;
 	font-family: "Bai Jamjuree", sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	position: absolute;
 }
 
@@ -81,6 +81,29 @@
 	border-top-right-radius: 0;
 }
 p {
+	font-family: "Bai Jamjuree", sans-serif;
+	font-size: 16px;
+	color: #ffffff;
+}
+a {
+	font-family: "Bai Jamjuree", sans-serif;
+	font-size: 16px;
+	color: #FFFFFF;
+	text-decoration: none;
+	background-color: transparent;
+	-webkit-text-decoration-skip: objects;
+}
+
+.text-center {
+	text-align: right !important;
+}
+.total-table {
+	font-family: "Mitr", sans-serif;
+	font-size: 16px;
+	/* color: #ff0022; */
+	color: #000000;
+}
+.link-cart{
 	font-family: "Bai Jamjuree", sans-serif;
 	font-size: 16px;
 	color: #ffffff;
